fix aligncenter for semiologic too
git-svn-id: file:///Users/michaelkoepke/svn/semiologic/themes/semiologic/trunk@819 6c9c31c4-cb3d-4424-af3d-876279169c7e

--- a/style.css
+++ b/style.css
@@ -849,9 +849,12 @@ div.media
 
 .skin .aligncenter
 {
-	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.skin img.aligncenter {
+	display: block;
 }
 
 .skin .alignleft
